--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+:root {
+  --color-white: #eee;
+  --color-green: rgb(37, 165, 47);
+  --color-black: #111;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+button {
+  border: none;
+  border-radius: 5px;
 }
 
 h2 {
-  font-size: 48px;
+  font-size: 52px;
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 27px;
   font-weight: 500;
 }
