--- a/src/components/landing/Landing.module.css
+++ b/src/components/landing/Landing.module.css
@@ -6,6 +6,7 @@
   gap: clamp(0.5rem, 5vw, 5rem);
   position: relative;
   overflow: hidden;
+  color: var(--color-white);
 }
 
 .landing_bg {
@@ -14,8 +15,8 @@
   width: 100%;
   background-image: url(./img/flower_shop.jpg);
   background-size: cover;
-  background-color: green;
-  filter: blur(5px) brightness(0.8);
+  background-color: var(--color-green);
+  filter: blur(5px) brightness(0.4);
   transform: scale(1.05);
 }
 
@@ -40,4 +41,20 @@
   font-weight: bold;
   line-height: 2rem;
   z-index: 1;
+}
+
+.button {
+  padding: 1.1rem 1.3rem;
+  font-size: 20px;
+  font-weight: 300;
+  background-color: var(--color-green);
+  color: var(--color-white);
+}
+
+.button:hover {
+  filter: brightness(1.2);
+}
+
+p:first-child {
+  text-align: center;
 }
